<resources>
    <string name="app_name">EVAPP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="txtfirstname_hint">First Name</string>
    <string name="txtlastname_hint">Last Name</string>
    <string name="txtusername_hint">Username</string>
    <string name="txtEmailAddress_hint">Email Address</string>
    <string name="txtpassword_hint">Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="logo_hint" size="20dp">EvApp</string>
    <string name="facebook_app_id">151019008963027</string>
    <string name="fb_login_protocol_scheme">fb151019008963027</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


</resources>
